# android-file-transfer-linux

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  FAQ.md  README.md  _config.yml  android-file-transfer-linux.json  android-file-transfer.appdata.xml  flatpak-manifest.json  index.html  index.md  params.json  pyproject.toml  replace-guards.py  replace-license.py
.github/: .editorconfig
.github/workflows/: actions.yml
cli/: CMakeLists.txt  Command.cpp  Command.h  CommandLine.cpp  CommandLine.h  CommandLineStub.cpp  MakeTuple.h  PosixStreams.h  ProgressBar.h  Session.cpp  Session.h  Tokenizer.cpp  Tokenizer.h  Tokens.h  arg_lexer.l  arg_lexer.l.cpp  arg_lexer.l.h  cli.cpp  update.sh
cmake/: FindReadline.cmake
fuse/: CMakeLists.txt  Exception.h  FuseDirectory.h  FuseEntry.h  FuseId.h  fuse.cpp  fuse_ll.cpp
mtp/: ByteArray.cpp  ByteArray.h  Demangle.h  Token.h  cli.cpp  function_invoker.h  fuse.cpp  log.cpp  log.h  main.cpp  make_function.h  make_tuple.h  scope_guard.h  types.h  version.cpp.in  version.h
mtp/backend/darwin/usb/: Context.cpp  Context.h  Device.cpp  Device.h  DeviceDescriptor.cpp  DeviceDescriptor.h  Exception.cpp  Exception.h  Interface.cpp  Interface.h  call.h  usb.h
mtp/backend/haiku/usb/: Context.cpp  Context.h  Device.cpp  Device.h  DeviceDescriptor.cpp  DeviceDescriptor.h  Interface.h
mtp/backend/libusb/usb/: Context.cpp  Context.h  Device.cpp  Device.h  DeviceDescriptor.cpp  DeviceDescriptor.h  Exception.cpp  Exception.h  Interface.cpp  Interface.h  call.h
mtp/backend/linux/usb/: BufferAllocator.h  BulkPipe.cpp  BulkPipe.h  Context.cpp  Context.h  Device.cpp  Device.h  DeviceDescriptor.cpp  DeviceDescriptor.h  Directory.h  Endpoint.cpp  Endpoint.h  Exception.cpp  Exception.h  Interface.cpp  Interface.h
mtp/backend/linux/usb/linux/: types.h  usbdevice_fs.h
mtp/backend/posix/: Exception.cpp  Exception.h  FileHandler.cpp  FileHandler.h
mtp/metadata/: Library.cpp  Library.h  Metadata.cpp  Metadata.h
mtp/mtpz/: TrustedApp.cpp  TrustedApp.h
mtp/ptp/: ByteArrayObjectStream.h  Container.h  DataTypeCode.cpp  DataTypeCode.h  DataTypeCode.values.h  Device.cpp  Device.h  DeviceProperty.cpp  DeviceProperty.h  DeviceProperty.values.h  EventCode.cpp  EventCode.h  EventCode.values.h  IObjectStream.h  InputStream.h  JoinedObjectStream.h  MemoryObjectStream.h  Messages.cpp  Messages.h  ObjectFormat.cpp  ObjectFormat.h  ObjectFormat.values.h  ObjectId.h  ObjectProperty.cpp  ObjectProperty.h  ObjectProperty.values.h  ObjectPropertyListParser.h  OperationCode.cpp  OperationCode.h  OperationCode.values.h  OperationRequest.h  OutputStream.cpp  OutputStream.h  Packet.h  PerceivedDeviceType.values.h  PipePacketer.cpp  PipePacketer.h  Protocol.cpp  Protocol.h  Response.cpp  (+5 more)
mtp/usb/: BulkPipe.cpp  BulkPipe.h  Context.cpp  Context.h  Device.cpp  Device.h  DeviceBusyException.cpp  DeviceBusyException.h  DeviceDescriptor.cpp  DeviceDescriptor.h  DeviceNotFoundException.h  Exception.cpp  Exception.h  Interface.cpp  Interface.h  Request.cpp  Request.h  TimeoutException.h  call.h  types.h
osx/: Entitlements.plist  Info.plist  android-file-transfer.icns  ds_store_template  icns.sh
python/: CMakeLists.txt  aftl.cpp
python/example/: menu.py  requirements.txt
qt/: .gitignore  CMakeLists.txt  Info.plist.in  android-file-transfer.appdata.xml  android-file-transfer.desktop  android-file-transfer.qrc  commandqueue.cpp  commandqueue.h  createdirectorydialog.cpp  createdirectorydialog.h  createdirectorydialog.ui  devicesdialog.cpp  devicesdialog.h  devicesdialog.ui  fileuploader.cpp  fileuploader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mtpmimedata.cpp  mtpmimedata.h  mtpobjectsmodel.cpp  mtpobjectsmodel.h  mtpstoragesmodel.cpp  mtpstoragesmodel.h  progressdialog.cpp  progressdialog.h  progressdialog.ui  qt.pro  qtobjectstream.cpp  qtobjectstream.h  renamedialog.cpp  renamedialog.h  renamedialog.ui  utils.cpp  utils.h
qt/translations/: android-file-transfer-linux_cs.qm  android-file-transfer-linux_cs.ts  android-file-transfer-linux_it.ts  android-file-transfer-linux_nl.ts  android-file-transfer-linux_ru.qm  android-file-transfer-linux_ru.ts  android-file-transfer-linux_zh-CN.ts  translations.qrc.in
snap/: snapcraft.yaml
